Changelog for Babel.

Babel 3.0.0-dev
==============
- [#78][#62] added outputSeparator for BabelLinks
- [#75] Replaced deprecated method clearCache() with refresh()
- [#84] optimize OnResourceDuplicate
- [#44][#29] Using cultureKey instead of contextKey on BabelTranslation snippet
- [#70] fix is_folder to isfolder
- [#27][#90][#92] Refactor language selection, runs using AJAX
- [#83][#59] extend babel plugin OnResourceDuplicate for nested resources
- [#67] italian translation
- [#60] Added Dutch translation
- [#58][#64] Fixed the error with updating a resource, at least in the quick update window

Babel 2.2.5-pl
==============
- Extended list of languages in translation files and added Romanian translation.
- Issue #31: Maked babel buttons in manager position fixed and changed look accordingly.

Babel 2.2.4-pl
==============
- Fixed issue #25: Unchecked "checkbox" TVs are now synchronized correctly.
- Issue #22: Added showCurrent parameter to BabelLinks snippet.

Babel 2.2.3-rc1
==============
- Issue #18: Added 'id' placeholder for BabelLink chunk which is used by the BabelLinks snippet.
- Fixed issue #21: Manager redirect causes error in Google Chrome browser.

Babel 2.2.2-rc2
==============
- Fixed bug: Initial synchronization of TV values when setting a link manually didn't work.

Babel 2.2.2-rc1
==============
- Added feature #16: Values of synchronized TVs of the source resource(s) can be copied to the target resource when setting a translation link manually.
- Added showUnpublished parameter to BabelLinks and BabelTranslation snippets.

Babel 2.2.1-rc1
==============
- Added feature #11: User is redirect to new resource after creating a translation.
- Fixed issue #15: Babel TV of duplicated resources is being initiated.
- Alias is duplicated when creating an translation, too.

Babel 2.2.0-pl
==============
- Fixed bug which occured when creating new resources.
- Fixed bug in validation which is performed on setting a link manually.